syntax = "proto3";

package topos.shared.v1;

message StarkProof {
  bytes value = 1;
}
